# RedGo-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
redgo/: __init__.py  browser.py  cli.py  deploy.py  errors.py  ext.py  guard.py  models.py  parse.py  server.py
scripts/: launch_chrome.sh
tests/: test_deploy.py  test_errors.py  test_ext.py  test_guard.py  test_parse.py
